# zapomni

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  1.md  AGENT_COORDINATION.md  AGENT_WORKFLOW.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  CI_CD_SETUP.md  CLAUDE.md  CODEX_INTEGRATION_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_READINESS.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PHASE_DETAILS.md  PROJECT_STATUS_REPORT.md  QUALITY_FRAMEWORK.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY_2025-11-23.md  SPECS_INDEX.md  SPEC_METHODOLOGY.md  TASK_BREAKDOWN.md  count_tests_edges.sh  docker-compose.yml  generate_final_report.py  pyproject.toml  verify_level3.py  verify_level3_v2.py
.claude/: resume-prompt.md
.claude/commands/: dev.md  handoff.md  pm.md  review.md  spec.md  status.md
.codex/: CODEX_PROTOCOL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  tests.yml
.prompts/: code_review_template.md  implementation_template.md  reconciliation_template.md  refinement_template.md  spec_creation_template.md  synthesis_template.md  verification_template.md
.shashka/: ACTIVE.md  SNAPSHOT.md  SYSTEM_PROMPT.md  config.yaml
.shashka/agents/: dev.md  docs.md  reviewer.md
.shashka/log/: 2025-11-28-session-14.md  2025-11-28-session-15.md  2025-11-28-session-16.md  2025-11-28-session-17.md  2025-11-28-session-18.md  2025-11-28.md  2025-11-29-session-19.md  2025-11-29-session-20.md  2025-11-29-session-21.md  2025-11-29-session-22.md  2025-11-29-session-23.md  2025-11-30-session-24.md  2025-11-30-session-25.md  2025-12-01-session-26.md
.shashka/specs/: _TEMPLATE.md
.shashka/state/: ACTIVE.md  HANDOFF.md  SNAPSHOT.md
.shashka/steering/: product.md  structure.md  tech.md
.spec-workflow/steering/: product.md  structure.md  tech.md
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  README.md  dashboard.html
docs/adr/: ADR-TEMPLATE.md  README.md
docs/api/: README.md  errors.md  schemas.md
docs/architecture/: data-flow.md  modules.md  overview.md
docs/examples/: basic-usage.py  mcp-client-config.json
docs/installation/: quickstart.md
docs/usage/: basic-operations.md
research/: 00_final_synthesis.md  01_tech_stack_infrastructure.md  02_mcp_solutions_architectures.md  03_best_practices_patterns.md
scripts/migrations/: migrate_to_workspaces.py
src/zapomni_cli/: __init__.py  __main__.py  install_hooks.py
src/zapomni_core/: __init__.py  config.py  exceptions.py  logging_service.py  memory_processor.py  models.py  runtime_config.py  workspace_manager.py
src/zapomni_db/: __init__.py  cypher_query_builder.py  exceptions.py  falkordb_client.py  models.py  pool_config.py  schema_manager.py
src/zapomni_mcp/: __init__.py  __main__.py  config.py  server.py  session_manager.py  sse_transport.py
src/zapomni_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  sse_client.py  test_sse_client_basic.py
tests/integration/: INTEGRATION_TESTS_README.md  test_garbage_collector_integration.py  test_index_codebase_extractors.py  test_mvp_integration.py  test_phase2_integration.py  test_phase3_integration.py  test_schema_manager_integration.py  test_sse_integration.py  test_transport_compat.py  test_workspace_isolation.py
tests/load/: __init__.py  locustfile.py
tests/unit/: __init__.py  conftest.py  test_add_memory_tool.py  test_ast_chunker.py  test_bm25_search.py  test_build_graph_tool.py  test_call_graph_analyzer.py  test_call_graph_tools.py  test_class_hierarchy_builder.py  test_clear_all_tool.py  test_code_processor.py  test_config.py  test_config_manager.py  test_cypher_query_builder.py  test_delete_memory_tool.py  test_docx_processor.py  test_embedding_cache.py  test_entity_extractor.py  test_exceptions.py  test_export_graph_tool.py  test_falkordb_client.py  test_falkordb_client_extended.py  test_falkordb_pool.py  test_function_extractor.py  test_garbage_collector.py  test_get_related_tool.py  test_get_stats_tool.py  (+36 more)
(+277 files in other folders)
